header align fix

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -64,7 +64,7 @@ ul {
 h1, h2, h3, h4, h5, h6 {
     font-family: $font-banana-medium;
     font-weight: 300;
-    text-align: center;
+    
 
 }
 
