--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -58,7 +58,10 @@ aside.sidebar {
     section.contact {
         position:absolute;
         bottom:  0;
-            
+
+            h4{
+                text-align: center;
+            }
             ul {
                 margin:0 auto;
             }
